@@ -282,3 +282,24 @@ _wrap_g_mount_unmount(PyGObject *self,
     Py_INCREF(Py_None);
     return Py_None;
 }
+%%
+override g_vfs_get_supported_uri_schemes noargs
+static PyObject *
+_wrap_g_vfs_get_supported_uri_schemes(PyGObject *self)
+{
+    const char * const *names;
+    PyObject *ret;
+
+    names = g_vfs_get_supported_uri_schemes(G_VFS(self->obj));
+
+    ret = PyList_New(0);
+    while (names && *names) {
+        PyObject *item = PyString_FromString(names[0]);
+        PyList_Append(ret, item);
+        Py_DECREF(item);
+
+        names++;
+    }
+
+    return ret;
+}
